added CiviCRM link

--- a/_posts/2015-07-19-gsoc-part1.md
+++ b/_posts/2015-07-19-gsoc-part1.md
@@ -4,7 +4,7 @@ title: Implementing Open Supporter Data Interface (OSDI) API for CiviCRM Part I 
 tags: [gsoc, open source, civicrm, osdi]
 ---
 
- I worked on the Open Supporter Data Interface (OSDI) API implementation into CiviCRM project as a 2015 [Google Summer of Code](https://www.google-melange.com/archive/gsoc/2015/orgs/civicrm/projects/anuditverma.html) student.
+ I worked on the Open Supporter Data Interface (OSDI) API implementation into [CiviCRM](https://civicrm.org/) project as a 2015 [Google Summer of Code](https://www.google-melange.com/archive/gsoc/2015/orgs/civicrm/projects/anuditverma.html) student.
 
  OSDI is a way for progressive US-based organizations which do community, labor and political organizing, use CiviCRM and are customers of various progressive data vendors to “sync up all their stuff” about contacts and their various activities.
 
