Added post: Is light wave or particle

--- a/_posts/2015-08-27-gsoc-part2.md
+++ b/_posts/2015-08-27-gsoc-part2.md
@@ -5,8 +5,7 @@ tags: [gsoc, open source, civicrm, osdi]
 ---
 
 __Looking back at the 'Overview'__
-
-The OSDI API implementation is in line with CiviCRM's mission to be an open platform for organizations of all sizes. Creating the implementation will allow them to use the OSDI API easily. The existence of a common API will reduce progressive data vendors’ customer costs related to moving data between different systems, lower integration costs and enhance the ability of innovators to create products for the marketplace. You can learn more about OSDI at [www.opensupporter.org](http://opensupporter.org/)
+<br>The OSDI API implementation is in line with CiviCRM's mission to be an open platform for organizations of all sizes. Creating the implementation will allow them to use the OSDI API easily. The existence of a common API will reduce progressive data vendors’ customer costs related to moving data between different systems, lower integration costs and enhance the ability of innovators to create products for the marketplace. You can learn more about OSDI at [www.opensupporter.org](http://opensupporter.org/)
  
 
 __The 'org.civicrm.osdi' Extension__
