--- a/_posts/2015-08-27-gsoc-part2.md
+++ b/_posts/2015-08-27-gsoc-part2.md
@@ -2,6 +2,8 @@
 layout: post
 title: Implementing Open Supporter Data Interface (OSDI) API for CiviCRM Part II - Concluding Post
 tags: [gsoc, open source, civicrm, osdi]
+image: http://www.anudit.in/img/GSoC_15.jpg
+share-img: http://www.anudit.in/img/GSoC_15.jpg
 ---
 
 __Looking back at the 'Overview'__
