--- a/_posts/2015-07-19-gsoc-part1.md
+++ b/_posts/2015-07-19-gsoc-part1.md
@@ -2,6 +2,8 @@
 layout: post
 title: Implementing Open Supporter Data Interface (OSDI) API for CiviCRM Part I - Beginning
 tags: [gsoc, open source, civicrm, osdi]
+image: http://www.anudit.in/img/GSoC_15.jpg
+share-img: http://www.anudit.in/img/GSoC_15.jpg
 ---
 
  I worked on the Open Supporter Data Interface (OSDI) API implementation into [CiviCRM](https://civicrm.org/) project as a 2015 [Google Summer of Code](https://www.google-melange.com/archive/gsoc/2015/orgs/civicrm/projects/anuditverma.html) student.
