Updated GSoC Posts

--- a/_posts/2015-07-19-gsoc-part1.md
+++ b/_posts/2015-07-19-gsoc-part1.md
@@ -51,4 +51,5 @@ __Important Links:__
 
 * [Project Page](http://wiki.civicrm.org/confluence/display/CRM/OSDI+Integration)
 * [OSDI.org](http://opensupporter.org/)
+* [Original Blog Post  Part I](https://civicrm.org/blog/anudit-verma/implementing-the-open-supporter-data-interface-osdi-api-for-civicrm) on CiviCRM.
 
