--- a/_posts/2015-08-27-gsoc-part2.md
+++ b/_posts/2015-08-27-gsoc-part2.md
@@ -60,3 +60,4 @@ __See Also__
 * Project discussion [thread](https://forum.civicrm.org/index.php?topic=36374.0) on the CiviCRM developer's forum.
 * Project repository on GitHub [here](https://github.com/anuditverma/org.civicrm.osdi).
 * Learn more about [OSDI](http://opensupporter.org/).
+* [Original Blog Post Part II](https://civicrm.org/blog/anudit-verma/implementing-the-open-supporter-data-interface-osdi-api-for-civicrm-gsoc) on CiviCRM. 
