Minor changes in all the posts

--- a/_posts/2015-07-19-gsoc-part1.md
+++ b/_posts/2015-07-19-gsoc-part1.md
@@ -8,7 +8,7 @@ share-img: http://www.anudit.in/img/GSoC_15.jpg
 
  I worked on the Open Supporter Data Interface (OSDI) API implementation into [CiviCRM](https://civicrm.org/) project as a 2015 [Google Summer of Code](https://www.google-melange.com/archive/gsoc/2015/orgs/civicrm/projects/anuditverma.html) student.
 
- OSDI is a way for progressive US-based organizations which do community, labor and political organizing, use CiviCRM and are customers of various progressive data vendors to “sync up all their stuff” about contacts and their various activities.
+ OSDI is a way for progressive US-based organizations which do community, labour and political organizing, use CiviCRM and are customers of various progressive data vendors to “sync up all their stuff” about contacts and their various activities.
 
  For example, an organization might use [NGP VAN](https://www.ngpvan.com/) to get access to information about its supporters who are voters. It might use [ShareProgress](https://www.shareprogress.org/) to ask supporters to take action on an issue using social media links, based on a “blast” e-mail sent by that organization to supporters using [Salsa](https://www.salsalabs.com/). [The Action Network](https://actionnetwork.org/) already has a working OSDI implementation.
 
@@ -26,9 +26,9 @@ __Benefits of a common API:__
  * Better ability to pick and choose technology products and use them together
  * Multi-vendor solutions mean less scope for problems
 
- ​Technology Application Developers
+ Technology Application Developers
 
- * Write platform integration code once rather than per platform which requires less development hours
+ * Write platform integration code once rather than per platform which requires fewer development hours
  * Data consistency across platforms reduces cost
  * Can spend more resources on new customer features rather than integration code
 
@@ -52,4 +52,3 @@ __Important Links:__
 * [Project Page](http://wiki.civicrm.org/confluence/display/CRM/OSDI+Integration)
 * [OSDI.org](http://opensupporter.org/)
 * [Original Blog Post  Part I](https://civicrm.org/blog/anudit-verma/implementing-the-open-supporter-data-interface-osdi-api-for-civicrm) on CiviCRM.
-
