Edited blog posts

--- a/_posts/2015-07-19-gsoc-part1.md
+++ b/_posts/2015-07-19-gsoc-part1.md
@@ -39,9 +39,9 @@ __Benefits of a common API:__
 
 __Bonding with the CiviCRM community__
 
-The community bonding phase is a great chance for GSoC students to get along with their organisation, adapt their workflow, setup a development environment and have a useful introductory sessions with their project mentors.
+The community bonding phase is a great chance for GSoC students to get along with their organisation, adapt their workflow, setup a development environment and have useful introductory sessions with their project mentors.
 
-I too had a similar experience with my project mentors Joe McLaughlin, Eileen McNaughton, Joe Murray and Tim Anderegg along with OSDI founder Josh Cohen and Jason Rosenbaum of the Action Network. It surely feels great to come across talented people who are very zealous and motivated towards open-source technology. Also it is a great opportunity to learn and absorb knowledge from their working experience and contributions to the community.
+I too had a similar experience with my project mentors Joe McLaughlin, Eileen McNaughton, Joe Murray and Tim Anderegg along with OSDI founder Josh Cohen and Jason Rosenbaum of the Action Network. It sure feels great to come across talented people who are very zealous and motivated towards open-source technology. Also it is a great opportunity to learn and absorb knowledge from their working experience and contributions to the community.
 
 Josh Cohen hosts weekly online OSDI Technology Committee meetings. I was a regular attendee with Joe McLaughlin which helped me significantly in gaining knowledge and insights about OSDI implementation processes and profiles for different CRMs.
 
