--- a/_posts/2015-08-27-gsoc-part2.md
+++ b/_posts/2015-08-27-gsoc-part2.md
@@ -48,7 +48,7 @@ __Acknowledgments:__
 I would like to thanks, Joe McLaughlin and Eileen McNaughton who were the mentors assigned to me for this project.
 
 * Joe Sir, thank you for believing in me as many may not be knowing that originally I applied in CiviCRM with a different proposal which was not very much similar to this project. So I am very thankful for selecting me and how we worked together in understanding OSDI by attending the weekly OSDI Technology Committee meetings which were very helpful for moving ahead in the completion of this project.
-* Eileen ma'am, we had a time zone difference in which it was sometimes difficult to match our work timings. Despite this I am very much grateful to you as whenever I had a query regarding CiviCRM you always responded in quickly whether it was late in the night at your end or us hanging out on IRC for hours. So thank you for assisting me in understanding CiviCRM.
+* Eileen ma'am, we had a time zone difference in which it was sometimes difficult to match our work timings. Despite this, I am very much grateful to you as whenever I had a query regarding CiviCRM you always responded in quickly whether it was late in the night at your end or us hanging out on IRC for hours. So thank you for assisting me in understanding CiviCRM.
 * I would like to thanks, Joe Murray who encouraged me and pushed me ahead when I needed the most. Thank you, Sir for advising me on setup-ing my development environment and helping on other Civi issues.
 * Thanks to Jason Rosenbaum from Action Network who helped me get an insight into an existing OSDI implementation at their organization. Well, Jason and I discussed the issues he raised on my Git Hub repository which helped this implementation work effectively and as per OSDI specification. So thanks to him for contributing his time in this project.
 * Josh Cohen, founder of OSDI for hosting weekly online OSDI Technology Committee meetings that helped me gain knowledge about OSDI significantly.
