--- a/_posts/2015-08-27-gsoc-part2.md
+++ b/_posts/2015-08-27-gsoc-part2.md
@@ -18,25 +18,25 @@ __AEP : API Entry Point__
 
 To explore the people's data on the server AEP was constructed which is a part of the OSDI specification. The AEP helps in exploring the various endpoints like people's collection, individual person's record, brand logo etc. Also, AEP has 'Person Sign-up Helper' for the creation of new individual resources.
 
-![AEP](/img/gsoc/AEP.png "AEP")
+![AEP](/img/gsoc/AEP.jpg "AEP")
 
 This extension is capable of handling the following actions, let's look up to them briefly:
 
 * GET -requests are automatically invoked when you want to retrieve the People's data or any individual person's data. You can look up to the desired data through the API explorer on your own CiviCRM site at /civicrm/api (available from the menubar at Help -> Developer -> Api Explorer). Also, you can execute a REST call having an entity as 'People' and action as 'get' passing along the user key and site key, parameters like options or limits can be added to these REST URI requests.
 
-![GET](/img/gsoc/AEP.png "GET")
+![GET](/img/gsoc/AEP.jpg "GET")
 
 * POST -these requests are used to add a new person's record into the system. The 'Person Sign-up Helper' accepts these requests in JSON format having fields' name according to OSDI specification.To POST a new record click on the NON-GET button (orange colour) and provide the data in JSON format. The fields provided should be based OSDI specification in order to get this request accepted into the system.
 
-![POST](/img/gsoc/POST.png "POST")
+![POST](/img/gsoc/POST.jpg "POST")
 
 * PUT -This is primarily used to update an existing person's record. You need to provide the 'Method' while using the HAL-browser interface at the person's endpoint whose record has to be updated.
 
-![PUT](/img/gsoc/PUT.png "PUT")
+![PUT](/img/gsoc/PUT.jpg "PUT")
 
 * DELETE -It deletes the person's record. Similarly, just fill the 'Method' field as 'DELETE' to remove that record.
 
-![DELETE](/img/gsoc/DELETE.png "DELETE")
+![DELETE](/img/gsoc/DELETE.jpg "DELETE")
 
 __Using the extension:__
 You can follow the documentation present in the GitHub repository of this project. Here : [https://github.com/anuditverma/org.civicrm.osdi](https://github.com/anuditverma/org.civicrm.osdi)
