Moderated posts' tags

--- a/_posts/2015-07-19-gsoc-part1.md
+++ b/_posts/2015-07-19-gsoc-part1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Implementing Open Supporter Data Interface (OSDI) API for CiviCRM Part I - Beginning
-tags: [gsoc, open source, civicrm, osdi]
+tags: [gsoc, open source]
 image: https://www.anudit.in/img/GSoC_15.jpg
 share-img: https://www.anudit.in/img/GSoC_15.jpg
 ---
@@ -32,20 +32,20 @@ __Benefits of a common API:__
  * Data consistency across platforms reduces cost
  * Can spend more resources on new customer features rather than integration code
 
-​ Platform Vendors
+ Platform Vendors
 
  * Ability to integrate means an easier sell to customers who already use another platform
  * Common API across vendors enables a larger app ecosystem for the platform
 
 __Bonding with the CiviCRM community__
 
-The community bonding phase is a great chance for GSoC students to get along with their organisation, adapt their workflow, setup a development environment and have useful introductory sessions with their project mentors.
+The community bonding phase is a great chance for GSoC students to get along with their organisation, adapt their workflow, set up a development environment and have useful introductory sessions with their project mentors.
 
-I too had a similar experience with my project mentors Joe McLaughlin, Eileen McNaughton, Joe Murray and Tim Anderegg along with OSDI founder Josh Cohen and Jason Rosenbaum of the Action Network. It sure feels great to come across talented people who are very zealous and motivated towards open-source technology. Also it is a great opportunity to learn and absorb knowledge from their working experience and contributions to the community.
+I too had a similar experience with my project mentors Joe McLaughlin, Eileen McNaughton, Joe Murray and Tim Anderegg along with OSDI founder Josh Cohen and Jason Rosenbaum of the Action Network. It sure feels great to come across talented people who are very zealous and motivated toward open-source technology. Also, it is a great opportunity to learn and absorb knowledge from their working experience and contributions to the community.
 
 Josh Cohen hosts weekly online OSDI Technology Committee meetings. I was a regular attendee with Joe McLaughlin which helped me significantly in gaining knowledge and insights about OSDI implementation processes and profiles for different CRMs.
 
-Next weeks I actively discussed various vital processes required to setup my development environment. A few roadblocks and issues were encountered in the initial setup in Windows but after proper guidance and assistance from experienced members on IRC, I moved to Linux and initiated the development environment setup on it. Moving along, objectives for the next weeks were to develop a wrapper to get API for contact in accordance with OSDI format and experimenting with the [HAL browser](https://github.com/mikekelly/hal-browser).
+Next weeks I actively discussed various vital processes required to set up my development environment. A few roadblocks and issues were encountered in the initial setup in Windows but after proper guidance and assistance from experienced members on IRC, I moved to Linux and initiated the development environment setup on it. Moving along, objectives for the next weeks were to develop a wrapper to get API for contact in accordance with OSDI format and experimenting with the [HAL browser](https://github.com/mikekelly/hal-browser).
 
 __Important Links:__
 
