--- a/_posts/2015-08-27-gsoc-part2.md
+++ b/_posts/2015-08-27-gsoc-part2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Implementing Open Supporter Data Interface (OSDI) API for CiviCRM Part II - Concluding Post
-tags: [gsoc, open source, civicrm, osdi]
+tags: [gsoc, open source]
 image: https://www.anudit.in/img/GSoC_15.jpg
 share-img: https://www.anudit.in/img/GSoC_15.jpg
 ---
@@ -26,7 +26,7 @@ This extension is capable of handling the following actions, let's look up to th
 
 ![GET](/img/gsoc/AEP.jpg "GET")
 
-* POST -these requests are used to add a new person's record into the system. The 'Person Sign-up Helper' accepts these requests in JSON format having fields' name according to OSDI specification.To POST a new record click on the NON-GET button (orange colour) and provide the data in JSON format. The fields provided should be based OSDI specification in order to get this request accepted into the system.
+* POST -these requests are used to add a new person's record into the system. The 'Person Sign-up Helper' accepts these requests in JSON format having fields' name according to OSDI specification. To POST a new record click on the NON-GET button (orange colour) and provide the data in JSON format. The fields provided should be based OSDI specification in order to get this request accepted into the system.
 
 ![POST](/img/gsoc/POST.jpg "POST")
 
@@ -49,10 +49,10 @@ I would like to thanks, Joe McLaughlin and Eileen McNaughton who were the mentor
 
 * Joe Sir, thank you for believing in me as many may not be knowing that originally I applied in CiviCRM with a different proposal which was not very much similar to this project. So I am very thankful for selecting me and how we worked together in understanding OSDI by attending the weekly OSDI Technology Committee meetings which were very helpful for moving ahead in the completion of this project.
 * Eileen ma'am, we had a time zone difference in which it was sometimes difficult to match our work timings. Despite this, I am very much grateful to you as whenever I had a query regarding CiviCRM you always responded in quickly whether it was late in the night at your end or us hanging out on IRC for hours. So thank you for assisting me in understanding CiviCRM.
-* I would like to thanks, Joe Murray who encouraged me and pushed me ahead when I needed the most. Thank you, Sir for advising me on setup-ing my development environment and helping on other Civi issues.
-* Thanks to Jason Rosenbaum from Action Network who helped me get an insight into an existing OSDI implementation at their organization. Well, Jason and I discussed the issues he raised on my Git Hub repository which helped this implementation work effectively and as per OSDI specification. So thanks to him for contributing his time in this project.
+* I would like to thanks, Joe Murray who encouraged me and pushed me ahead when I needed the most. Thank you Sir, for advising me on setup-ing my development environment and helping on other Civi issues.
+* Thanks to Jason Rosenbaum from Action Network who helped me get an insight into an existing OSDI implementation at their organization. Well, Jason and I discussed the issues he raised on my Git Hub repository which helped this implementation work effectively and as per OSDI specification. So thanks to him for contributing his time to this project.
 * Josh Cohen, founder of OSDI for hosting weekly online OSDI Technology Committee meetings that helped me gain knowledge about OSDI significantly.
-* Edsel Roque Lopez, who works for JMA consulting, Joe Murray got us introduced to each other. We share same time zone and Edsel's expertise on CiviCRM also helped me gain a lot of background working of this software. So Thanks to him as well for contributing his valuable time to this project.
+* Edsel Roque Lopez, who works for JMA consulting, Joe Murray got us introduced to each other. We share the same time zone and Edsel's expertise on CiviCRM also helped me gain a lot of background working of this software. So Thanks to him as well for contributing his valuable time to this project.
 * Thanks to Timothy Anderegg for joining in the discussion of this project and for sharing your valuable thoughts on it.
 
 __See Also__
