Revert Change: Revert commit f5e54e4

--- a/_posts/2015-08-27-gsoc-part2.md
+++ b/_posts/2015-08-27-gsoc-part2.md
@@ -2,7 +2,7 @@
 layout: post
 title: Implementing Open Supporter Data Interface (OSDI) API for CiviCRM Part II - Concluding Post
 tags: [gsoc, open source]
-thumbnail-img: https://www.anudit.in/assets/img/GSoC_15.jpg
+image: https://www.anudit.in/assets/img/GSoC_15.jpg
 share-img: https://www.anudit.in/assets/img/GSoC_15.jpg
 ---
 
